--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
